MFC r198945:   Fix typo in kernel message. The fix is based upon the patch in the PR.

PR:		kern/140279
  Submitted by:	Alexander Best <alexbestms@math.uni-muenster.de>